--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             xhttp.onload = function () {
                 document.querySelector("table").innerHTML = this.responseText;
             }
-            xhttp.open("GET", "script.js", true);
+            xhttp.open("GET", "nomes.json", true);
             xhttp.send();
         }
 
