--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 let tr = document.createElement("tr");
 
                 tr.innerHTML = `
-                <td>${this.nomes.firstName[0]}</td>
-                <td>${this.nomes.firstName[2]}</td>
-                <td>${this.nomes.firstName[3]}</td>
+                <td>${this.nomes[0]}</td>
+                <td>${this.nomes[2]}</td>
+                <td>${this.nomes[3]}</td>
                 `
 
                 tbody.appendChild(tr);
