--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 tr.innerHTML = this.responseText;
                 tbody.appendChild(tr);
             }
-            xhttp.open("GET", "nomes.json", true);
+            xhttp.open("GET", "script.js", true);
             xhttp.send();
         }
 
