--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h1>TESTE, BANCO DE DADOS...</h1>
 
-        <div id="table"></div>
+        <div id="demo"></div>
 
     </div>
     <script>
@@ -24,7 +24,7 @@
         function table() {
             let xhttp = new XMLHttpRequest();
             xhttp.onload = function () {
-                document.getElementById("table").innerHTML = this.responseText;
+                document.getElementById("demo").innerHTML = this.responseText;
             }
             xhttp.open("GET", "script.js", true);
             xhttp.send();
