--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
         function loadDoc() {
             const xhttp = new XMLHttpRequest();
             xhttp.onload = function() {
-                const jsonDoc = JSON.parse(this)
-                let table = document.getElementById("demo");
-
-                table.innerHTML = jsonDoc;
+                let result = JSON.parse(xhttp.responseText);
+                document.getElementById("demo").innerHTML = result;
             }
             xhttp.open("GET", "nomes.json", true);
             xhttp.send();
