--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 table.innerHTML = `
                 <table>
                     <tr>
-                        <th>${xhttpSET.firstName[0]}</th>
+                        <th>${xhttpSET.firstName}</th>
                     </tr>
                 </table>
                 `
