--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     table.innerHTML = `
                     <table>
                         <tr>
-                            <th>${xhttpSET.firsName}</th>
+                            <th>${xhttpSET.nomes}</th>
                         </tr>
                     </table>
                     `
