--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                     <table>
                         <tr>
                             <th>${xhttpSET[0]}</th>
+                            <th>${xhttpSET[1]}</th>
+                            <th>${xhttpSET[2]}</th>
                         </tr>
                     </table>
                     `
