--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     table.innerHTML = `
                     <table>
                         <tr>
-                            <th>${xhttpSET[0]}</th>
-                            <th>${xhttpSET[1]}</th>
-                            <th>${xhttpSET[2]}</th>
+                            <th>${xhttpSET.nomes[0]}</th>
+                            <th>${xhttpSET.nomes[1]}</th>
+                            <th>${xhttpSET.nomes[2]}</th>
                         </tr>
                     </table>
                     `
