--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             let y = await x.text();
 
             for (i = 0; i < y.lenght; i++) {
+                console.log(y[i]);
                 document.getElementById("demo").innerHTML += y[i];
             }
         }
