--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             for (i = 0; i < y.lenght; i++) {
                 console.log(y[i]);
-                document.getElementById("demo").innerHTML += y[i];
+                document.getElementById("demo").innerHTML = y[i];
             }
         }
 
