--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 const myOBJ = JSON.parse(this.responseText);
                 document.getElementById("demo").innerHTML = myOBJ.firstName;
             }
-            xhttp.open("GET", "nomes.json", true);
+            xhttp.open("GET", "nomes.txt", true);
             xhttp.send();
         }
 
