--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         const xhttp = new XMLHttpRequest();
         xhttp.onload = function() {
             const myOBJ = JSON.parse(this.responseText);
+            console.log(myOBJ);
             document.getElementById("demo").innerHTML = myOBJ.nomes;
         }
         xhttp.open("GET", "nomes.txt");
