--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         xhttp.onload = function() {
             const myOBJ = JSON.parse(this.responseText);
             console.log(myOBJ);
-            document.getElementById("demo").innerHTML = myOBJ.nomes;
+            document.getElementById("demo").innerHTML = myOBJ.nome;
         }
         xhttp.open("GET", "nomes.txt");
         xhttp.send();
